--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,8 +18,13 @@
     background: #fff;
 }
 
-.table :where(:first-child) :where(:first-child) :where(th, td):first-child {
+.table :where(:first-child) :where(:first-child) :where(th, td):first-child,
+.table :where(:first-child) :where(:first-child) :where(th, td):last-child {
     border-top-left-radius: 0;
+}
+
+.table :where(thead, tfoot) :where(th, td) {
+    background-color: #f3f3f3;
 }
 
 .dataTables_info {
